--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.0
+#  player_mobile_bcvideo:
+#    path: ../player-mobile-bcvideo/
 
 dev_dependencies:
   flutter_test:
