--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ on:
   pull_request:
     branches:
       - main
-    paths-ignore:
-      - "../player_mobile_bcvideo/**"
+
 
 jobs:
   flutter_test:
@@ -19,7 +18,9 @@ jobs:
         with:
           flutter-version: '1.22.6'
       - run: flutter pub get
+          paths-ignore:
+            - "../player-mobile-bcvideo"
 #        - igno
-      - run: flutter analyze
-      - run: flutter test
-      - run: flutter build apk --debug
+#      - run: flutter analyze
+#      - run: flutter test
+#      - run: flutter build apk --debug
