path ignore 4 add url

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ on:
   pull_request:
     branches:
       - main
-    paths-ignore:
-      - "../player-mobile-bcvideo"
+#    paths-ignore:
+#      - "../player-mobile-bcvideo"
 
 
 jobs:
