--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
   flutter_test:
     name: Run flutter analyze and test
     runs-on: ubuntu-latest
+    env:
+      player_mobile_bcvideo: ../player-mobile-bcvideo/
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -19,7 +21,9 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '1.22.6'
-      - run: flutter pub get
+      - name: Download dependencies
+          run: flutter pub get
+          working-directory: ${{env.player_mobile_bcvideo}}
 #        - igno
 #      - run: flutter analyze
 #      - run: flutter test
