--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,8 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '1.22.6'
-      - name: Download dependencies
-          run: flutter pub get
-          working-directory: ${{env.player_mobile_bcvideo}}
+      - run: flutter pub get
+        working-directory: ${{env.player_mobile_bcvideo}}
 #        - igno
 #      - run: flutter analyze
 #      - run: flutter test
