path ignore 8 ssh

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   player_mobile_bcvideo:
     git:
-      url: https://gitlab.com/snapp-clients/bfi/player-mobile-bcvideo.git
+      url: git@gitlab.com:snapp-clients/bfi/player-mobile-bcvideo.git
 
 dev_dependencies:
   flutter_test:
