--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.0
-  player_mobile_bcvideo:
+#  player_mobile_bcvideo:
+#    git:
+#      url: git@gitlab.com:snapp-clients/bfi/player-mobile-bcvideo.git
+  flutter_plugin_v1:
     git:
-      url: git@gitlab.com:snapp-clients/bfi/player-mobile-bcvideo.git
+      url: git@github.com:Odialko/plugin_v1.git
 
 dev_dependencies:
   flutter_test:
