CI test 1 with script

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
 
-#  flutter_plugin_v1:
-#    git:
-#      url: git@github.com:Odialko/plugin_v1.git
+  flutter_plugin_v1:
+    git:
+      url: git@github.com:Odialko/plugin_v1.git
 
 
 dev_dependencies:
