--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,11 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '1.22.6'
+      - uses: shimataro/ssh-key-action@v2
+          with:
+            key: ${{ secrets.SSHPV1 }}
+            name: id_rsa
+            known_hosts: ${{ secrets.PLUGIN_V1 }}
       - run: sh ./scripts/flutter_pub_get.sh
 #      - run: flutter pub get
 #      - run: flutter analyze
