--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.8.0
-  grinder: ^0.8.6
-  intl_translation: ^0.17.9
-  intl: ^0.16.0
-  intl_utils: ^1.3.0
-  archive: ^2.0.11
+  grinder: 0.8.3+1
+  intl_translation: ^0.17.8
+  intl_utils: 1.9.0
+  archive: ^2.0.13
+
+dependency_overrides:
+  intl: 0.17.0-nullsafety.2
 
 flutter:
   uses-material-design: true
